lambda call syntax

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
       <textarea id="text"></textarea>
       <button id="next">Step</button> 
       <button id="next_big">Next</button> 
+      <button id="next_line">Line</button> 
       <button id="next_all">&gt;&gt;</button> 
       <br>
       <br>
